src/components/modal/style.css
.Modal {
	height:100vh;
	width: 100vw;
	background-color: rgba(0, 0, 0, .6);
	position: fixed;
	top: 0px;
	left: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: 0.3s scale;
	transform: scale(0);
	overflow-y: scroll;
}

.Modal-active {
	transition: 0.3s scale;
	transform: scale(1);
}

.Modal-content {
	background-color: #fff;
	border-radius: 10px;
	width: 960px;
	overflow-y: scroll;
}

